Update el to #app

--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
         <title>Vue + Webpack Setup</title>
     </head>
     <body>
-        <name></name>
+        <div id="app">
+            <name></name>    
+        </div>
         <script src="public/app.js"></script>
     </body>
 </html>
